--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ acceptance {
 appengine {
     deploy {
         project = "trevorism-gcloud"
+        version = "1"
         stopPreviousVersion = true
         promote = true
     }
