--- a/build.gradle
+++ b/build.gradle
@@ -46,8 +46,10 @@ dependencies {
     compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.4'
     compile 'com.trevorism:secure-utils:1.0.0'
 
+    compile 'com.trevorism:eventhub-client:1.4.0'
     compile 'io.swagger:swagger-jersey2-jaxrs:1.5.16'
     compile 'com.microsoft.azure:azure:1.7.0'
+    compile 'org.slf4j:slf4j-nop:1.7.25'
 
     acceptanceCompile 'info.cukes:cucumber-groovy:1.2.5'
     acceptanceCompile 'com.trevorism:http-utils:1.0.0'
