Make sure check runs before deliver

--- a/build.gradle
+++ b/build.gradle
@@ -85,4 +85,5 @@ check {
 task deliver {
     dependsOn("appengineDeploy", "acceptance")
     acceptance.mustRunAfter("appengineDeploy")
+    appengineDeploy.mustRunAfter("check")
 }
