Azure VM build injecting secrets

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,15 @@ dependencies {
     testCompile "com.google.appengine:appengine-tools-sdk:$appengineVersion"
 }
 
+processResources{
+    doLast{
+        copy{
+            from "${System.getProperty("user.home")}/${project.name}/secrets.properties"
+            into "build/resources/main"
+        }
+    }
+}
+
 acceptance {
     stepDefinitionRoots = ['src/acceptance/groovy']
     finalizedBy("sendAcceptanceTestEvents")
