--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:1.3.4'
-        classpath 'com.trevorism:gradle-acceptance-plugin:1.3.0'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.1.0'
+        classpath 'com.trevorism:gradle-acceptance-plugin:1.3.4'
         classpath 'com.trevorism:gradle-gae-deploy-plugin:1.1.1'
         classpath 'com.trevorism:gradle-release-plugin:0.3.0'
     }
@@ -34,28 +34,24 @@ repositories {
     }
 }
 
-def appengineVersion = "1.9.64"
-def jerseyVersion = "2.27"
+def appengineVersion = "1.9.76"
+def jerseyVersion = "2.29.1"
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.4.15'
+    compile 'org.codehaus.groovy:groovy-all:2.5.8'
 
     compile "com.google.appengine:appengine-api-1.0-sdk:$appengineVersion"
 
     compile "org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
     compile "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
     compile "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
-    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.4'
+    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.10.0'
     compile 'com.trevorism:secure-utils:1.0.1'
 
     compile 'com.trevorism:eventhub-client:1.4.0'
-    compile 'io.swagger:swagger-jersey2-jaxrs:1.5.16'
-    compile 'com.microsoft.azure:azure:1.7.0'
-    compile 'org.slf4j:slf4j-nop:1.7.25'
-
-    acceptanceCompile 'info.cukes:cucumber-groovy:1.2.5'
-    acceptanceCompile 'com.trevorism:http-utils:1.0.1'
-    acceptanceCompile 'org.apache.httpcomponents:httpclient:4.5.5'
+    compile 'io.swagger:swagger-jersey2-jaxrs:1.5.23'
+    compile 'com.microsoft.azure:azure:1.27.0'
+    compile 'org.slf4j:slf4j-nop:1.7.28'
 
     testCompile 'junit:junit:4.12'
     testCompile "com.google.appengine:appengine-testing:$appengineVersion"
@@ -80,8 +76,8 @@ acceptance {
 
 appengine {
     deploy {
-        project = "trevorism-gcloud"
-        version = "1"
+        projectId = "trevorism-gcloud"
+        version = "0-2-0"
         stopPreviousVersion = true
         promote = true
     }
