No acceptance tests as of now

--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ check {
 }
 
 task deliver {
-    dependsOn("appengineDeploy", "acceptance")
+    dependsOn("appengineDeploy")
     acceptance.mustRunAfter("appengineDeploy")
     appengineDeploy.mustRunAfter("check")
 }
