--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ buildscript {
         }
         maven {
 			allowInsecureProtocol = true
-            url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+            url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
         }
     }
     dependencies {
         classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.1.0'
         classpath 'com.trevorism:gradle-acceptance-plugin:2.1.0'
-        classpath 'com.trevorism:gradle-gae-deploy-plugin:1.2.0'
-        classpath 'com.trevorism:gradle-release-plugin:0.4.0'
+        classpath 'com.trevorism:gradle-gae-deploy-plugin:1.3.0'
+        classpath 'com.trevorism:gradle-release-plugin:0.5.0'
     }
 }
 
@@ -32,7 +32,7 @@ repositories {
     mavenCentral()
     maven {
 		allowInsecureProtocol = true
-        url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
+        url uri("https://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
     }
 }
 
